[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylutron-caseta"
version = "0.18.3"
description = "Provides an API to the Lutron Smartbridge"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8.0"
authors = [
    { name = "gurumitts" },
]
maintainers = [
    { name = "mdonoughe" },
]
dependencies = [
    "async_timeout>=3.0.1;python_version<'3.11'",
    "cryptography",
]

[project.optional-dependencies]
cli = [
    "click~=8.1.2",
    "xdg~=5.1.1",
    "zeroconf~=0.38.4",
]

[project.scripts]
lap-pair = "pylutron_caseta.cli:lap_pair[cli]"
leap = "pylutron_caseta.cli:leap[cli]"
leap-scan = "pylutron_caseta.cli:leap_scan[cli]"

[project.urls]
Homepage = "https://github.com/gurumitts/pylutron-caseta"

[tool.pylint.MASTER]
reports = false

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "too-many-arguments",
  "too-many-instance-attributes",
  "too-many-public-methods",
  "too-many-lines",
]

[tool.pylint.BASIC]
good-names = [
  "i","j","k","ex","Run","_", # defaults
  "T",
]

[tool.pylint.SIMILARITIES]
# allow more lines when using typing to allow for copied signatures
min-similarity-lines = 8

[tool.hatch.envs.default]
features = ["cli"]

[tool.hatch.envs.lint]
extra-dependencies = [
    # linters such as flake8 and pylint should be pinned, as new releases
    # make new things fail. Manually update these pins when pulling in a
    # new version
    "black==22.3.0",
    "flake8==3.8.3",
    "mypy==1.5.1",
    "pydocstyle==5.1.1",
    "pylint==2.17.5",
]
features = ["cli"]
template = "test"

[tool.hatch.envs.lint.scripts]
run = [
    "black --check src tests",
    "flake8 src tests",
    "pylint src tests",
    "pydocstyle src tests",
    "mypy src tests",
]

[[tool.hatch.envs.lint.matrix]]
python = ["3.11"]

[tool.hatch.envs.test]
dependencies = [
    "coveralls~=2.1.2",
    "pytest-asyncio==0.14.0",
    "pytest-cov~=2.10.1",
    "pytest-sugar~=0.9.4",
    "pytest-timeout~=1.4.2",
    "pytest~=6.2.5",
]

[tool.hatch.envs.test.scripts]
run = [
    "py.test --timeout=30 --durations=10 --cov=pylutron_caseta --cov-report=",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]
