[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylutron-caseta"
version = "0.19.0"
description = "Provides an API to the Lutron Smartbridge"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8.0"
authors = [
    { name = "gurumitts" },
]
maintainers = [
    { name = "mdonoughe" },
]
dependencies = [
    "async_timeout>=3.0.1;python_version<'3.11'",
    "cryptography",
]

[project.optional-dependencies]
cli = [
    "click~=8.1.2",
    "xdg~=5.1.1",
    "zeroconf~=0.38.4",
]

[project.scripts]
lap-pair = "pylutron_caseta.cli:lap_pair[cli]"
leap = "pylutron_caseta.cli:leap[cli]"
leap-scan = "pylutron_caseta.cli:leap_scan[cli]"

[project.urls]
Homepage = "https://github.com/gurumitts/pylutron-caseta"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.envs.default]
features = ["cli"]

[tool.hatch.envs.lint]
extra-dependencies = [
    # linters such as mypy and ruff should be pinned, as new releases
    # make new things fail. Manually update these pins when pulling in a
    # new version
    "mypy==1.5.1",
    "ruff==0.1.14",
]
features = ["cli"]
template = "test"

[tool.hatch.envs.lint.scripts]
run = [
    "ruff format --check src tests",
    "ruff check src tests",
    "mypy src tests",
]

[[tool.hatch.envs.lint.matrix]]
python = ["3.12"]

[tool.hatch.envs.test]
dependencies = [
    "coveralls~=3.3.1",
    "pytest-asyncio==0.23.3",
    "pytest-cov~=4.1.0",
    "pytest-sugar~=0.9.7",
    "pytest-timeout~=2.2.0",
    "pytest~=7.4.4",
]

[tool.hatch.envs.test.scripts]
run = [
    "py.test --timeout=30 --durations=10 --cov=pylutron_caseta --cov-report=",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
