[metadata]
name = pylutron_caseta
version = 0.13.0
license = Apache
description = Provides an API to the Lutron Smartbridge
long_description = file: README.md
author = gurumitts
maintainer = mdonoughe
platforms = Linux
url = https://github.com/gurumitts/pylutron-caseta

[options]
packages = pylutron_caseta
install_requires =
    cryptography
python_requires = >=3.8.0

[options.extras_require]
lint =
    # linters such as flake8 and pylint should be pinned, as new releases
    # make new things fail. Manually update these pins when pulling in a
    # new version
    black==20.8b1
    flake8==3.8.3
    pylint==2.12.1
    mypy==0.782
    pydocstyle==5.1.1
test =
    coveralls~=2.1.2
    pytest~=6.2.5
    pytest-asyncio==0.14.0
    pytest-cov~=2.10.1
    pytest-timeout~=1.4.2
    pytest-sugar~=0.9.4


[flake8]
max-line-length = 88
extend-ignore = E203


[pylint.MASTER]
reports = no

[pylint.MESSAGES CONTROL]
disable =
  too-many-arguments,
  too-many-instance-attributes,
  too-many-public-methods,
  too-many-lines,

[pylint.BASIC]
good-names=
  i,j,k,ex,Run,_, # defaults
  T

[pylint.SIMILARITIES]
# allow more lines when using typing to allow for copied signatures
min-similarity-lines=8
